--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       </div>
     </div>
     <main>
-      <h1>TINY-83</h1>
-      <p>Pixel editor</p>
+      <h1>TINY-83 wysiwyg</h1>
       <div class="inputs" style="display: none">
         <div class="axis">
           <div>
