--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       </div>
     </div>
     <main>
-      <h1>TINY-83 wysiwyg</h1>
+      <h1>TINY-83</h1>
+      <p>WYSIWYG Pixel editor</p>
       <div class="inputs" style="display: none">
         <div class="axis">
           <div>
