--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <script src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script>
     <script src="main.js"></script>
     <script src="mint.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNSBZRM5X"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-VFNSBZRM5X');
+    </script>
   </head>
   <body>
     <div class="links">
