--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
       </div>
       <table id="screen"></table>
-      <div class="result">
+      <div class="result" style="display: none;">
         <label for="screen-code">Screen code:</label>
         <input type="text" id="screen-code"></input>
       </div>
