--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="en"><head>
-  <title>TINY-83</title>
+  <title>TINY-83 WYSIWYG Pixel editor</title>
   <meta name="author" content="TINY-83">
     <meta name="description" content="Graphing calculator in your wallet">
     <meta charset="utf-8">
