--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script src="https://unpkg.com/@metamask/detect-provider/dist/detect-provider.min.js"></script>
-    <script src="main.js?1216"></script>
-    <script src="mint.js?1216"></script>
+    <script src="main.js?1215"></script>
+    <script src="mint.js?1215"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNSBZRM5X"></script>
     <script>
@@ -86,7 +86,8 @@
           <p class="status-message"></p>
           <p class="tokens-left"></p>
         </div>
-        <button>Mint</button>
+        <button id="mint-btn">Mint</button>
+        <button id="update-btn">Update</button>
       </section>
     </main>
   </body>
